--- a/src/styles/sistema_solar.css
+++ b/src/styles/sistema_solar.css
@@ -31,23 +31,60 @@
     }
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 
   /*--------------------------------estilos del contenido--------------------------------*/
 
-h1{
-    font-size: 50px;
-    text-align: center;
- }
-
-h2{
-    font-size: 35px;
-    text-align: center;
+*{
+  text-shadow: 1px 1px 2px #213547;
 }
 
-h3{
-    font-size: 29px;
- }
+.intro{
+    align-items: center;
+    justify-content: space-around;
+    padding-left: 20%;
+    padding-right: 20%;
 
-p{
-    font-size: 20px;
- }
+    h1{
+      font-size: 50px;
+      text-align: center;
+    }
+
+    h2{
+      font-size: 35px;
+      text-align: center;
+    }
+}
+
+
+.info{
+    margin-top: 5em;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+    gap: 10px;
+    padding-left: 20%;
+    padding-right: 20%;
+
+    h1{
+      font-size: 35px;
+      text-align: center;
+    }
+    
+    h2{
+        font-size: 30px;
+        text-align: start;
+    }
+    
+    h3{
+        font-size: 25px;
+    }
+    
+    p{
+        font-size: 20px;
+    }
+}
